---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: ????
  Changes:
    - Updated for Factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2024-04-11
  Changes:
    - removed simhelper, use native sim mod loading
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2023-12-22
  Changes:
    - removed use of funccapture, which is being removed
    - Type annotations and minor bugfixes
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2022-06-02
  Changes:
    - use funccapture for tips & tricks
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021-02-03
  Changes:
    - Updated locales
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021-01-29
  Changes:
    - Added Tips & Tricks simulations
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020-11-24
  Changes:
    - Update for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 0.18.5
Date: 2020-08-08
  Changes:
    - Option for slashed/nonslashed zero (Sprite from Reika)
---------------------------------------------------------------------------------------------------
Version: 0.18.4
Date: 2020-08-01
  Changes:
    - Updated Sprites thanks to Spectrus1702
    - Correctly initialize unconnected Nixie Tube mode selection when built unconnected
---------------------------------------------------------------------------------------------------
Version: 0.18.3
Date: 2020-05-01
  Changes:
    - Removed debug requires