@@ -3,6 +3,7 @@ Version: 2.0.0
 Date: ????
   Changes:
     - Updated for Factorio 2.0
+    - Support for `double` by sending hex=2 and value high half on green, low half on red
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.5
 Date: 2024-04-11
